# musicopy

./: .gitignore  Cargo.toml  Dioxus.toml  Justfile  README.md  ci.conveyor.conf  conveyor.conf  settings.gradle.kts
.github/workflows/: android.yml  desktop.yml
.run/: composeApp.run.xml  composeAppDesktop.run.xml  desktop.run.xml  desktopHot.run.xml  desktopMobile.run.xml  mobile.run.xml  sandbox.run.xml
assets/: main.css
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/app/musicopy/: AppApplication.kt  DirectoryPicker.android.kt  MainActivity.kt  Platform.android.kt  Previews.kt  RustNdkContext.kt
composeApp/src/androidMain/kotlin/app/musicopy/ui/: QRScanner.android.kt
composeApp/src/androidMain/kotlin/zip/meows/musicopy/: AppApplication.kt  DirectoryPicker.android.kt  MainActivity.kt  Platform.android.kt  Previews.kt  RustNdkContext.kt
composeApp/src/androidMain/kotlin/zip/meows/musicopy/ui/: QRScanner.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/composeResources/drawable/: add_24px.xml  arrow_back_24px.xml  arrow_downward_24px.xml  arrow_forward_24px.xml  arrow_upward_24px.xml  cell_tower_24px.xml  check_circle_24px.xml  chevron_forward_24px.xml  content_copy_24px.xml  delete_sweep_24px.xml  error_24px.xml  folder_open_24px.xml  info_24px.xml  input_24px.xml  network_node_24px.xml  open_in_new_24px.xml  p2p_24px.xml  pending_24px.xml  qr_code_scanner_24px.xml
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/kotlin/app/musicopy/: App.kt  AppSettings.kt  CoreInstance.kt  CoreViewModel.kt  DirectoryPicker.kt  Platform.kt  utils.kt
composeApp/src/commonMain/kotlin/app/musicopy/ui/: Color.kt  NodeStatusSheet.kt  QRScanner.kt  Theme.kt
composeApp/src/commonMain/kotlin/app/musicopy/ui/components/: AnimatedList.kt  DetailBox.kt  Info.kt  LoadingButton.kt  SectionCard.kt  SectionHeader.kt  TopBar.kt
composeApp/src/commonMain/kotlin/app/musicopy/ui/screens/: ConnectManuallyScreen.kt  ConnectQRScreen.kt  DisconnectedScreen.kt  HomeScreen.kt  PreTransferScreen.kt  Screens.kt  TransferScreen.kt  WaitingScreen.kt
composeApp/src/commonMain/kotlin/zip/meows/musicopy/: App.kt  AppSettings.kt  CoreViewModel.kt  DirectoryPicker.kt  Greeting.kt  Platform.kt  utils.kt
composeApp/src/commonMain/kotlin/zip/meows/musicopy/ui/: ConnectQRScreen.kt  HomeScreen.kt  NodeStatusSheet.kt  QRScanner.kt  Theme.kt
composeApp/src/commonMain/kotlin/zip/meows/musicopy/ui/components/: AnimatedList.kt  DetailBox.kt  LoadingButton.kt  SectionCard.kt  SectionHeader.kt  TopBar.kt
composeApp/src/commonMain/kotlin/zip/meows/musicopy/ui/screens/: ConnectManuallyScreen.kt  ConnectQRScreen.kt  ConnectingScreen.kt  HomeScreen.kt  PreTransferScreen.kt  Screens.kt  TransferScreen.kt  WaitingScreen.kt
composeApp/src/commonTest/kotlin/app/musicopy/: ComposeAppCommonTest.kt
composeApp/src/commonTest/kotlin/zip/meows/musicopy/: ComposeAppCommonTest.kt
composeApp/src/desktopMain/kotlin/app/musicopy/: DirectoryPicker.desktop.kt  Platform.jvm.kt  desktopUtils.kt  main.kt  mobile.kt  sandbox.kt
composeApp/src/desktopMain/kotlin/app/musicopy/ui/: ConnectWidget.kt  DesktopApp.kt  DesktopHome.kt  JobsWidget.kt  LibraryWidget.kt  QRScanner.desktop.kt  SettingsWidget.kt
composeApp/src/desktopMain/kotlin/app/musicopy/ui/components/: WidgetContainer.kt
composeApp/src/desktopMain/kotlin/app/musicopy/ui/screenshots/: DesktopHomeScreenshot.kt  MobileTransferScreenshot.kt
composeApp/src/desktopMain/kotlin/zip/meows/musicopy/: DirectoryPicker.desktop.kt  Platform.jvm.kt  main.kt  mobile.kt  sandbox.kt
composeApp/src/desktopMain/kotlin/zip/meows/musicopy/ui/: ConnectWidget.kt  DesktopApp.kt  DesktopHome.kt  JobsWidget.kt  LibraryWidget.kt  QRScanner.desktop.kt
composeApp/src/desktopMain/kotlin/zip/meows/musicopy/ui/components/: Info.kt  WidgetContainer.kt
composeApp/src/iosMain/kotlin/app/musicopy/: DirectoryPicker.ios.kt  MainViewController.kt  Platform.ios.kt
composeApp/src/iosMain/kotlin/app/musicopy/ui/: QRScanner.ios.kt
composeApp/src/iosMain/kotlin/zip/meows/musicopy/: DirectoryPicker.ios.kt  MainViewController.kt  Platform.ios.kt
crates/musicopy/: Cargo.toml
crates/musicopy-tui/: Cargo.toml
crates/musicopy-tui/src/: app.rs  event.rs  main.rs  ui.rs
crates/musicopy-tui/src/ui/: log.rs  mod.rs
crates/musicopy/src/: database.rs  error.rs  file_dialog.rs  lib.rs  model.rs  node.rs
crates/musicopy/src/fs/: android.rs  mod.rs
crates/musicopy/src/protocol/: database.rs
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
nix/: flake.nix
src/: main.rs
src/protocol/: mod.rs
web/: package.json
web/src/: styles.css
web/src/components/: BaseLayout.astro  FilledButtonLink.astro  Footer.astro  Main.astro  Nav.astro  TextButtonLink.astro
web/src/pages/: download.astro  index.astro  pricing.astro
web/src/pages/manual/: index.astro
