[package]
name = "musicopy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
arc-swap = "1.7.1"
dioxus = { version = "0.6.0", features = ["router"] }
futures = "0.3.31"
globwalk = "0.9.1"
iroh = "0.35.0"
iroh-blobs = "0.35.0"
tokio= "1.45.1"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
