[package]
name = "musicopy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
arc-swap = "1.7.1"
futures = "0.3.31"
globwalk = "0.9.1"
iroh = "0.35.0"
itertools = "0.14.0"
n0-future = "0.1.3"
postcard = { version = "1.1.1", features = ["alloc"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.45.1"
