[package]
name = "musicopy"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "musicopy"

[dependencies]
android_logger = "0.15.0"
anyhow = "1.0.98"
arc-swap = "1.7.1"
futures = "0.3.31"
globwalk = "0.9.1"
iroh = "0.35.0"
itertools = "0.14.0"
log = "0.4.27"
n0-future = "0.1.3"
postcard = { version = "1.1.1", features = ["alloc"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = "1.45.1"
uniffi = { version = "=0.28.3", features = [] }
