[package]
name = "musicopy"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "musicopy"

[dependencies]
android_logger = "0.15.0"
anyhow = "1.0.98"
arc-swap = "1.7.1"
async-std = "1.13.1"
async-stream = "0.3.6"
base64 = "0.22.1"
dashmap = "6.1.0"
directories-next = "2.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
globwalk = "0.9.1"
hex = "0.4.3"
image = "0.25.6"
iroh = "0.35.0"
itertools = "0.14.0"
log = "0.4.27"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
n0-future = "0.1.3"
ogg = "0.9.2"
opus = { git = "https://github.com/hazelmeow/opus-rs.git", branch = "unsafe-libopus" }
path-slash = "0.2.1"
postcard = { version = "1.1.1", features = ["alloc"] }
priority-queue = "2.5.0"
rand = "0.8.5"
rayon = "1.10.0"
rubato = "0.16.2"
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", branch = "dev-0.6", features = ["all"] }
thiserror = "2.0.12"
tokio = "1.45.1"
tokio-util = { version = "0.7.15", features = ["io"] }
twox-hash = "2.1.0"
uniffi = { version = "=0.28.3", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
rfd = "0.15.3"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk-context = "0.1.1"
